--- a/Projeto_Compweb/public/main.html
+++ b/Projeto_Compweb/public/main.html
@@ -412,6 +412,7 @@
           document.getElementById("um").style.display = "block";
           document.getElementById("pdfButton2").style.display = "none";
           document.getElementById("pdfButton3").style.display = "none";
+          document.getElementById("muro2").style.marginLeft = "30%";
           
         }
 
